2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b8

	* Moved email.log to .users directory.

2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b7

	* Fixed bug introduced in -b3.  However, the problem that -b3 was
	  trying to fix was that new Gallery_UserDB was returning a generic
	  class.  Will revisit this later.  Note, this fix is from 
	  1.4.2-cvs-b10

2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b6

	* Ignore config_version when running backup script.

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b5

	* Modified backup_albums.php to prevent a catch-22 situation.  You 
	  had to be logged in as admin to run the backup.  you can't login 
	  until you have upgraded your albums.  But you should backup 
	  before upgrading.  Fix is that you don't have to be admin to 
	  back up, and added instruction to remove the file again after 
	  backup.  Also changed timeout to 10 minutes, and added 
	  instructions about copying file from setup before running.

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b4

	* "Not valid yet" was appearing under photos for non-logged in users.

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b3

	* Upgrades will work in versions that predate $userDB->getUidList().

2003-11-12 Jens Tkotz <jens@peino.de> 1.4.1-RC4-cvs-b2

	* From now on languages changes that only are done 
	  in locale folder are not longer documented here.
	  
	  The changes are now in the corresponding Changelog file.

	* Change: Use RC-cvs Version Number like we did for 1.4

2003-11-12  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-b1

	* Fixed bug where you couldn't move your albums after you'd configured
	  them once. Thanks to Ozgreg.

2003-11-12  Beckett Madden-Woods  <beckett@beckettmw.com> 1.4.1-RC3

	* v1.4.1 Release Candidate 3

	* Added warning notice to upgraders in Config. Wizard Step 3.
