@@ -153,7 +153,7 @@ document.theform.commenter_name.focus();
 //-->
 </script>
 
-<?php if ($gallery->user->isAdmin() || $gallery->app->devMode == "yes") {
+<?php if ($gallery->app->devMode == "yes") {
        	print "<p>";
        	print gallery_validation_link("add_comments.php");
        	print "Not valid yet.";
