@@ -17,13 +17,15 @@
 	    <?php print poweredBy() ?>
             </span>
           <!-- PayPal donation block -->
-	  <?php if ($gallery->user->isAdmin() || $gallery->app->devMode == 'yes') { 
+	  <?php if ($gallery->app->devMode == 'yes') { 
 		  if (! isset($GALLERY_EMBEDDED_INSIDE)) {
 			  print "<br><br>";
 			  print album_validation_link($gallery->session->albumName);                      
 			  print "Not valid yet.";
-		  } ?>
-		  </td>        
+		  }
+	  } ?>
+	  </td>        
+	  <?php if ($gallery->user->isAdmin()) { ?>
 
           <td width=300 align=right>
             <span class="fineprint">
