@@ -27,14 +27,16 @@
 
 <?php 
 global $GALLERY_EMBEDDED_INSIDE;
-if ($gallery->user->isAdmin() || $gallery->app->devMode == "yes") {
+if ($gallery->app->devMode == "yes") {
        	if (! isset($GALLERY_EMBEDDED_INSIDE)) {
 	       	print "<br><br>";
 	       	print gallery_validation_link("albums.php");
 	       	print "Not valid yet.";
-       	} ?>
+       	}
+} ?>
+</td>
+<?php if ($gallery->user->isAdmin()) { ?>
 
-          </td>
 
           <!-- donation block -->
 
