@@ -20,8 +20,8 @@
                   <?php print poweredBy() ?>
                 </span>
     <?php 
-    if (! isset($GALLERY_EMBEDDED_INSIDE) && ($gallery->user->isAdmin() || 
-			    $gallery->app->devMode == "yes")) {
+    if (! isset($GALLERY_EMBEDDED_INSIDE) && 
+		    $gallery->app->devMode == "yes") {
 	    global $id;
 	    print "<br><br>";
 	    print album_validation_link($gallery->session->albumName, $id);
