@@ -19,7 +19,7 @@
     <?php print poweredBy() ?>
     </span>
     </td>
-<?php if ($gallery->user->isAdmin() || $gallery->app->devMode == "yes") {
+<?php if ($gallery->app->devMode == "yes") {
        	if (! isset($GALLERY_EMBEDDED_INSIDE)) {
 	       	print '<td align="right">';
 	       	print gallery_validation_link("albums.php");
