@@ -199,7 +199,7 @@ document.login_form.uname.focus();
 
 </div>
 </center>
-<?php if ($gallery->user->isAdmin() || $gallery->app->devMode == "yes") {
+<?php if ($gallery->app->devMode == "yes") {
        	print "<p>";
        	print gallery_validation_link("login.php");
 } ?>
