@@ -1,4 +1,8 @@
-2003-11-13  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b8
+2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b9
+
+	* w3.org links only if devMode="yes"
+
+2003-11-14  Joan McGalliard  <gallery@joanhenge.plus.com> 1.4.1-RC4-cvs-b8
 
 	* Moved email.log to .users directory.
 
